Fix active menu item not showing bug and clean code.

--- a/public/console.html
+++ b/public/console.html
@@ -4,7 +4,7 @@
   </h1>
   <div id="breadcrumb">
     <a href="/" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Dashboard</a>
-    <a href="#" class="current">Console</a>
+    <a href="#console" class="current">Console</a>
   </div>
   <div class="container-fluid">
     <div class="row-fluid">
@@ -12,7 +12,7 @@
         <div class="widget-box">
           <div class="widget-title">
             <h5>Output</h5>
-            <div class="buttons"><a href="#" class="btn btn-mini"><i class="icon-refresh"></i> Refresh</a></div>
+            <div class="buttons"><a href="#console" class="btn btn-mini"><i class="icon-refresh"></i> Refresh</a></div>
           </div>
           <div class="widget-content">
             <pre id="console-output">No output.</pre>
