--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="themes/style/delta.grey.css" type="text/css">
   <link rel="stylesheet" href="themes/style/fullcalendar.css" type="text/css">
   <script src="themes/js/jquery.min.js" type="text/javascript"></script>
+  <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+  <script src="/javascripts/index.js" type="text/javascript"></script>
 </head>
 
 <body>
