--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -50,6 +50,61 @@
       </div>
     </div>
     <div class="row-fluid">
+      <div class="span6">
+        <div class="widget-box">
+          <div class="widget-title"><span class="icon"><i class="icon-file"></i></span><h5>Recent Mails</h5><span title="54 total posts" class="label label-info tip-left">54</span></div>
+          <div class="widget-content nopadding">
+            <ul id="mails" class="recent-posts">
+              <li>
+                <div class="article-post">
+                  <span class="user-info"> By: neytiri on 2 Aug 2012, 09:27 AM, IP: 186.56.45.7 </span>
+                  <p>
+                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
+                  </p>
+                <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
+                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
+                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
+                </div>
+              </li>
+              <li>
+                <div class="article-post">
+                  <span class="user-info"> By: john on on 24 Jun 2012, 04:12 PM, IP: 192.168.24.3 </span>
+                  <p>
+                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
+                  </p>
+                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
+                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
+                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
+                </div>
+              </li>
+              <li>
+                <div class="article-post">
+                  <span class="user-info"> By: michelle on 22 Jun 2012, 02:44 PM, IP: 172.10.56.3 </span>
+                  <p>
+                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
+                  </p>
+                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
+                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
+                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
+                  </div>
+              </li>
+              <li class="viewall">
+                <a title="View all posts" class="tip-top" href="#"> + View all + </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="span6">
+        <div class="widget-box widget-calendar">
+          <div class="widget-title"><span class="icon"><i class="icon-calendar"></i></span><h5>Calendar</h5></div>
+          <div class="widget-content nopadding">
+            <div class="calendar"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row-fluid">
       <div class="span12">
         <div class="alert alert-info">
           Welcome in the <strong>Delta Admin Theme</strong>. Comingsoon all the pages!
@@ -78,129 +133,6 @@
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span6">
-        <div class="widget-box">
-          <div class="widget-title"><span class="icon"><i class="icon-file"></i></span><h5>Recent Posts</h5><span title="54 total posts" class="label label-info tip-left">54</span></div>
-          <div class="widget-content nopadding">
-            <ul class="recent-posts">
-              <li>
-                <div class="user-thumb">
-                  <img width="40" height="40" alt="User" src="themes/images/avatar2.png">
-                </div>
-                <div class="article-post">
-                  <span class="user-info"> By: neytiri on 2 Aug 2012, 09:27 AM, IP: 186.56.45.7 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                </div>
-              </li>
-              <li>
-                <div class="user-thumb">
-                  <img width="40" height="40" alt="User" src="themes/images/avatar3.png">
-                </div>
-                <div class="article-post">
-                  <span class="user-info"> By: john on on 24 Jun 2012, 04:12 PM, IP: 192.168.24.3 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                </div>
-              </li>
-              <li>
-                <div class="user-thumb">
-                  <img width="40" height="40" alt="User" src="themes/images/avatar1.png">
-                </div>
-                <div class="article-post">
-                  <span class="user-info"> By: michelle on 22 Jun 2012, 02:44 PM, IP: 172.10.56.3 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                  </div>
-              </li>
-              <li class="viewall">
-                <a title="View all posts" class="tip-top" href="#"> + View all + </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-
-        <div class="widget-box">
-          <div class="widget-title"><span class="icon"><i class="icon-comment"></i></span><h5>Recent Comments</h5><span title="88 total comments" class="label label-info tip-left">88</span></div>
-          <div class="widget-content nopadding">
-            <ul class="recent-comments">
-              <li>
-                <div class="user-thumb">
-                  <img width="40" height="40" alt="User" src="themes/images/avatar1.png">
-                </div>
-                <div class="comments">
-                  <span class="user-info"> User: michelle on IP: 172.10.56.3 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                    <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                    <a class="btn btn-warning btn-mini" href="#" data-placement="top" data-original-title="Make as spam"><i class="icon-trash"></i></a>
-                    <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                </div>
-              </li>
-              <li>
-                <div class="user-thumb">
-                  <img width="40" height="40" alt="User" src="themes/images/avatar3.png">
-                </div>
-                <div class="comments">
-                  <span class="user-info"> User: john on IP: 192.168.24.3 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                    <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                    <a class="btn btn-warning btn-mini" href="#" data-placement="top" data-original-title="Make as spam"><i class="icon-trash"></i></a>
-                    <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                </div>
-              </li>
-              <li>
-                <div class="user-thumb">
-                  <img width="40" height="40" alt="User" src="themes/images/avatar2.png">
-                </div>
-                <div class="comments">
-                  <span class="user-info"> User: neytiri on IP: 186.56.45.7 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-
-                    <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                    <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                    <a class="btn btn-warning btn-mini" href="#" data-placement="top" data-original-title="Make as spam"><i class="icon-trash"></i></a>
-                    <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-
-                </div>
-              </li>
-              <li class="viewall">
-                <a title="View all comments" class="tip-top" href="#"> + View all + </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="span6">
-        <div class="widget-box widget-calendar">
-          <div class="widget-title"><span class="icon"><i class="icon-calendar"></i></span><h5>Calendar</h5></div>
-          <div class="widget-content nopadding">
-            <div class="calendar"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row-fluid">
       <div id="footer" class="span12">
         2012 - 2013 &copy; Free Bootstrappage Admin. Brought to you by <a id="poweredBy" href="http://www.bootstrappage.com" target="_blank" title="Free Admin template design and developments"> Free bootstrappage admin template</a>
       </div>
@@ -211,6 +143,7 @@
       $.getScript('themes/js/excanvas.min.js');
       $.getScript('themes/js/delta.dashboard.js');
       $.getScript('themes/js/fullcalendar.min.js');
+      $.getScript('javascripts/dashboard.js');
       IsDashboardLoaded = true;
     }
   </script>
