--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -52,7 +52,7 @@
     <div class="row-fluid">
       <div class="span6">
         <div class="widget-box">
-          <div class="widget-title"><span class="icon"><i class="icon-file"></i></span><h5>Recent Mails</h5><span title="54 total posts" class="label label-info tip-left">54</span></div>
+          <div class="widget-title"><span class="icon"><i class="icon-file"></i></span><h5>Recent Mails</h5><span id="total-mails" title="0 total mails" class="label label-info tip-left">0</span></div>
           <div class="widget-content nopadding">
             <ul id="mails" class="recent-posts">
               <li>
