--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -57,42 +57,15 @@
             <ul id="mails" class="recent-posts">
               <li>
                 <div class="article-post">
-                  <span class="user-info"> By: neytiri on 2 Aug 2012, 09:27 AM, IP: 186.56.45.7 </span>
+                  <span class="user-info"> From [address] on [time]</span>
                   <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
+                    <a href="/dashboard/mail?messageId=">[Link with the email subject to show the content.]</a>
                   </p>
-                <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
                 </div>
-              </li>
-              <li>
-                <div class="article-post">
-                  <span class="user-info"> By: john on on 24 Jun 2012, 04:12 PM, IP: 192.168.24.3 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                </div>
-              </li>
-              <li>
-                <div class="article-post">
-                  <span class="user-info"> By: michelle on 22 Jun 2012, 02:44 PM, IP: 172.10.56.3 </span>
-                  <p>
-                    <a href="#">Vivamus sed auctor nibh congue, ligula vitae tempus pharetra...</a>
-                  </p>
-                  <a class="btn btn-primary btn-mini" href="#" data-placement="right" data-original-title="Edit"><i class="icon-pencil"></i></a>
-                  <a class="btn btn-success btn-mini" href="#" data-placement="top" data-original-title="Approved"><i class="icon-ok"></i></a>
-                  <a class="btn btn-danger btn-mini" href="#" data-placement="left" data-original-title="Delete"><i class="icon-remove"></i></a>
-                  </div>
-              </li>
-              <li class="viewall">
-                <a title="View all posts" class="tip-top" href="#"> + View all + </a>
               </li>
             </ul>
           </div>
+          <div id="mail-pagination"></div>
         </div>
       </div>
       <div class="span6">
