--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
 
   <script src="themes/js/jquery.ui.custom.js" type="text/javascript"></script>
   <script src="themes/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="themes/js/bootstrap-paginator.js" type="text/javascript"></script>
   <script src="themes/js/jquery.flot.min.js" type="text/javascript"></script>
   <script src="themes/js/jquery.flot.resize.min.js" type="text/javascript"></script>
   <script src="themes/js/jquery.peity.min.js" type="text/javascript"></script>
