Build the demo UI for "Build->Repositories" page.

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,9 @@
     <ul>
       <li><a href="#dashboard"><i class="icon icon-home"></i> <span>Dashboard</span></a></li>
       <li class="submenu">
-        <a href="#"><i class="icon icon-wrench"></i> <span>Build</span> <span class="label">2</span></a>
+        <a href="#"><i class="icon icon-wrench"></i> <span>Build</span> <span class="label">3</span></a>
         <ul>
+          <li><a href="#build-repos">Repositories</a></li>
           <li><a href="#">Locales</a></li>
           <li><a href="#">Run</a></li>
         </ul>
