--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,6 +14,23 @@
   <div id="breadcrumb">
     <a href="#" title="Go to Home" class="tip-bottom current"><i class="icon-home"></i> Dashboard</a>
   </div>
+
+  <!-- Modal for "clear old mails" confirmation. -->
+  <div id="clear-old-mails-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="clear-old-mails-modal-title" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="clear-old-mails-modal-title">Clear mails 3 months before?</h3>
+    </div>
+    <div class="modal-body">
+      <p>All saved mails 3 months before are going to be deleted, but you can
+      still retrieve them from your mail server.</p>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      <button id="clear-old-mails-btn" class="btn btn-primary">Clear</button>
+    </div>
+  </div>
+
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span12 center" style="text-align: center;">
@@ -52,7 +69,15 @@
     <div class="row-fluid">
       <div class="span6">
         <div class="widget-box">
-          <div class="widget-title"><span class="icon"><i class="icon-file"></i></span><h5>Recent Mails</h5><span id="total-mails" title="0 total mails" class="label label-info tip-left">0</span></div>
+          <div class="widget-title">
+            <span class="icon"><i class="icon-file"></i></span><h5>Recent Mails</h5>
+            <span id="total-mails" title="0 total mails" class="label label-info tip-left">0</span>
+            <div class="buttons">
+              <button class="btn btn-mini" role="button" data-toggle="modal" data-target="#clear-old-mails-modal">
+                <i class="icon-refresh"></i> Clear Old Mails
+              </button>
+            </div>
+          </div>
           <div class="widget-content nopadding">
             <ul id="mails" class="recent-posts">
               <li>
