--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,14 @@
   <title>Mobile Control Panel</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="themes/less/bootstrap.css">
+  <link rel="stylesheet" href="themes/less/bootstrap.css" type="text/css">
   <link rel="stylesheet" href="themes/style/delta.main.css" type="text/css">
   <link rel="stylesheet" href="themes/style/delta.grey.css" type="text/css">
   <link rel="stylesheet" href="themes/style/fullcalendar.css" type="text/css">
+  <link rel="stylesheet" href="themes/style/smart_wizard_vertical_custom.css" type="text/css">
+  <link rel="stylesheet" href="/stylesheets/build_repos.css" type="text/css">
   <script src="themes/js/jquery.min.js" type="text/javascript"></script>
+  <script src="themes/js/jquery.smartWizard-2.0.custom.js" type="text/javascript"></script>
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
   <script src="/javascripts/index.js" type="text/javascript"></script>
 </head>
@@ -45,6 +48,55 @@
     </ul>
   </div>
   <div id="mainBody" data-default-page="#dashboard">
+  </div>
+
+  <!-- Modal for task details -->
+  <div id="task-details-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="repo-details-modal-title" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="task-details-modal-title">Task name</h3>
+    </div>
+    <div class="modal-body">
+      <!-- Smart Wizard -->
+      <div id="task-details-wizard" class="swMain">
+        <ul>
+          <li>
+            <a href="#step-1">
+              <span class="stepNumber">1</span>
+              <span class="stepDesc">Prepare</span>
+            </a>
+          </li>
+          <li>
+            <a href="#step-2">
+              <span class="stepNumber">2</span>
+              <span class="stepDesc">clobber</span>
+            </a>
+          </li>
+          <li>
+            <a href="#step-3">
+              <span class="stepNumber">3</span>
+              <span class="stepDesc">create virtualenv</span>
+            </a>
+          </li>
+        </ul>
+        <div id="step-1">
+          <h2 class="StepTitle">Step 1 Content</h2>
+          <p>Details for step 1.</p>
+        </div>
+        <div id="step-2">
+          <h2 class="StepTitle">Step 2 Content</h2>
+          <p>Details for step 2.</p>
+        </div>
+        <div id="step-3">
+          <h2 class="StepTitle">Step 3 Content</h2>
+          <p>Details for step 3.</p>
+        </div>
+      </div>
+      <!-- End SmartWizard Content -->
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
   </div>
 
   <script src="themes/js/jquery.ui.custom.js" type="text/javascript"></script>
