Load repo details log in iframe

--- a/public/index.html
+++ b/public/index.html
@@ -61,36 +61,24 @@
       <div id="task-details-wizard" class="swMain">
         <ul>
           <li>
-            <a href="#step-1">
+            <a href="http://www.baidu.com">
               <span class="stepNumber">1</span>
               <span class="stepDesc">Prepare</span>
             </a>
           </li>
           <li>
-            <a href="#step-2">
+            <a href="http://www.hao123.com">
               <span class="stepNumber">2</span>
               <span class="stepDesc">clobber</span>
             </a>
           </li>
           <li>
-            <a href="#step-3">
+            <a href="http://image.baidu.com/">
               <span class="stepNumber">3</span>
               <span class="stepDesc">create virtualenv</span>
             </a>
           </li>
         </ul>
-        <div id="step-1">
-          <h2 class="StepTitle">Step 1 Content</h2>
-          <p>Details for step 1.</p>
-        </div>
-        <div id="step-2">
-          <h2 class="StepTitle">Step 2 Content</h2>
-          <p>Details for step 2.</p>
-        </div>
-        <div id="step-3">
-          <h2 class="StepTitle">Step 3 Content</h2>
-          <p>Details for step 3.</p>
-        </div>
       </div>
       <!-- End SmartWizard Content -->
     </div>
