--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="themes/style/delta.grey.css" type="text/css">
   <link rel="stylesheet" href="themes/style/fullcalendar.css" type="text/css">
   <link rel="stylesheet" href="themes/style/smart_wizard_vertical_custom.css" type="text/css">
-  <link rel="stylesheet" href="/stylesheets/build_repos.css" type="text/css">
+  <link rel="stylesheet" href="stylesheets/repo.css" type="text/css">
   <script src="themes/js/jquery.min.js" type="text/javascript"></script>
   <script src="themes/js/jquery.smartWizard-2.0.custom.js" type="text/javascript"></script>
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
   <script src="/javascripts/index.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -28,8 +29,8 @@
         <a href="#"><i class="icon icon-wrench"></i> <span>Build</span> <span class="label">3</span></a>
         <ul>
           <li><a href="#build-repos">Repositories</a></li>
-          <li><a href="#">Locales</a></li>
-          <li><a href="#">Run</a></li>
+          <li><a href="#build-locales">Locales</a></li>
+          <li><a href="#build-run">Run</a></li>
         </ul>
       </li>
       <li class="submenu">
@@ -59,40 +60,11 @@
     <div class="modal-body">
       <!-- Smart Wizard -->
       <div id="task-details-wizard" class="swMain">
-        <ul>
-          <li>
-            <a href="#step-1">
-              <span class="stepNumber">1</span>
-              <span class="stepDesc">Prepare</span>
-            </a>
-          </li>
-          <li>
-            <a href="#step-2">
-              <span class="stepNumber">2</span>
-              <span class="stepDesc">clobber</span>
-            </a>
-          </li>
-          <li>
-            <a href="#step-3">
-              <span class="stepNumber">3</span>
-              <span class="stepDesc">create virtualenv</span>
-            </a>
-          </li>
+        <ul id="steps-list">
         </ul>
-        <div id="step-1">
-          <h2 class="StepTitle">Step 1 Content</h2>
-          <p>Details for step 1.</p>
-        </div>
-        <div id="step-2">
-          <h2 class="StepTitle">Step 2 Content</h2>
-          <p>Details for step 2.</p>
-        </div>
-        <div id="step-3">
-          <h2 class="StepTitle">Step 3 Content</h2>
-          <p>Details for step 3.</p>
-        </div>
       </div>
       <!-- End SmartWizard Content -->
+
     </div>
     <div class="modal-footer">
       <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>
@@ -106,5 +78,6 @@
   <script src="themes/js/jquery.flot.resize.min.js" type="text/javascript"></script>
   <script src="themes/js/jquery.peity.min.js" type="text/javascript"></script>
   <script src="themes/js/delta.js" type="text/javascript"></script>
+  <script src="themes/js/bootstrap-paginator.min.js" type="text/javascript"></script>
 </body>
 </html>
