changes from wangshuai

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         <a href="#"><i class="icon icon-tasks"></i><span>Partner Build</span> <span class="label">2</span></a>
         <ul>
           <li><a href="#">Partners</a></li>
+          <li><a href="#navigation-config">navigation config</a></li>
           <li><a href="#">Run</a></li>
         </ul>
       </li>
